clusters/main/kubernetes/system/networkpolicies/app/paperless-allow-ingress-cilium-gateway.cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-ingress-cilium-gateway
  namespace: paperless
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: paperless
      app.kubernetes.io/name: paperless-ngx
      pod.name: main
  ingress:
    - fromEntities:
        - ingress
        - host
        - remote-node
      toPorts:
        - ports:
            - port: "8000"
              protocol: TCP
